# bulletty

./: .gitignore  .snapcraftignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: deploysite.yml  nightly.yml
distribution/flatpak/: .gitignore  build-flatpak.sh  dev.croci.bulletty.desktop  dev.croci.bulletty.metainfo.xml  dev.croci.bulletty.yml  shell.nix
docs/: themes.md
res/themes/: black-metal.toml  bulletty.toml  decaf.toml  dracula.toml  espresso.toml  github-dark-dimmed.toml  github.toml  nord.toml  onedark.toml  onelight.toml  pinky.toml  porple.toml  rosepine.toml  sagelight.toml  sakura.toml  silk-dark.toml  summercamp.toml  twilight.toml  vice.toml  woodland.toml  zenburn.toml
site/: make.sh  mkdocs.yml
site/docs/: _contributing.md  _index.md  contributing.md  index.md  install.md
site/docs/docs/: _reference.md  bulletty.md  cli_reference.md  hooks.md  themes.md
site/docs/stylesheets/: extra.css
snap/: snapcraft.yaml
src/: app.rs  cli.rs  defs.rs  dirs.rs  lib.rs  logging.rs  main.rs  mainui.rs  readerstate.rs
src/core/: config.rs  defs.rs  hooks.rs  mod.rs
src/core/feed/: feedparser.rs  feedutils.rs  html.rs  mod.rs
src/core/ui/: appscreen.rs  dialog.rs  instructiondetails.rs  mod.rs  notification.rs
src/feed/: feedentry.rs  feedparser.rs
src/feedparser/: feed.rs  feedentry.rs  feedparser.rs  mod.rs
src/ui/: appstate.rs  feedentrylist.rs  feedentrystate.rs  feedtree.rs  feedtreestate.rs  helpdialog.rs  mainstate.rs  mod.rs  readerstate.rs
src/ui/screens/: helpdialog.rs  mainscreen.rs  mainstate.rs  (+8 more)
(+7 files in other folders)
