[package]
name = "bulletty"
version = "0.1.0"
description = "a terminal feed (RSS+ATOM) reader"
authors = ["Bruno Croci <crocidb@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.5"
dirs = "5"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
