[package]
name = "bulletty"
version = "0.1.0"
description = "a terminal feed (RSS+ATOM) reader"
authors = ["Bruno Croci <crocidb@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.5"
dirs = "6"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
clap = { version = "4.5.46", features = ["derive"] }
roxmltree = "0.20.0"
openssl = { version = "0.10", features = ["vendored"] }
slug = "0.1"
html2md = "0.2.15"
regex = "1.11.2"
chrono = { version = "0.4", features = ["serde"] }
tui-markdown = "0.3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-error = "0.2"

[dev-dependencies]
tempfile = "3.21.0"
